--- a/client.html
+++ b/client.html
@@ -8,7 +8,21 @@
 	<p>Please enter your connection ID:</p>	
 	<input type="number" id="connection-id" min="0" max="99"/>
 	<button id="entered-connection-id">Enter</button>
-	<input type="color" id="color-input" style="display:none;"></input>
+	<div id="controls" style="display:none;">
+		<p>Color Controls</p>
+		<input type="color" id="color-input"/>
+		<p>Drive Controls</p>
+		<button onchange="onDrive(0)">^^</button>
+		<button onchange="onDrive(90)">>></button>
+		<button onchange="onDrive(180)">vv</button>
+		<button onchange="onDrive(240)"><<</button>
+		<p>Speed:</p>
+		<input type="number" id="speed"/>
+		<p>Text Message</p>
+		<input type="text" id="name" placeholder="Your name"/>
+		<input type="text" id="message" placeholder="Your message"/>
+		<button onclick="onMessage()">Send</button>
+	</div>
 	<p id="status">Waiting...</p>
 	<script src="./client.js"></script>
 </body>
